# plojo

./: Cargo.toml  shell.nix
cli/: Cargo.toml
cli/src/: config.rs
plojo_output_wayland/: Cargo.toml  build.rs
plojo_output_wayland/src/: lib.rs  protocol.rs
plojo_translator/src/dictionary/: load.rs
