[workspace]

members = [
    "plojo_input_geminipr",
    "plojo_input_stdin",
    "plojo_input_keyboard",
    "plojo_core",
    "plojo_translator",
    "plojo_output_enigo",
    "plojo_output_macos",
    "plojo_output_wayland",
    "cli",
    "telemetry",
    "lookup",
    "plover_convert",
]

default-members = ["cli"]
